frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iiitb-community-frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: durgaprasad81/iiitb-community-frontend:latest
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: iiitb-community-frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30200
