ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iiitb-community-ingress
  labels:
    name: iiitb-community-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: iiitb-community-frontend-service
                port:
                  number: 3000
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: iiitb-community-backend-service
                port:
                  number: 3333
